cmake_minimum_required(VERSION 3.5)
project(nana-creator)

add_executable(nana-creator
    libs/pugixml/pugixml.hpp
    libs/pugixml/pugixml.cpp
    src/propertygrid_helper.cpp
    src/lock_guard.h
    src/creator.h
    src/nana_extra/pgitems.h
    src/nana_extra/propertygrid.cpp
    src/ctrls/box_model.h
    src/ctrls/property.h
    libs/pugixml/pugiconfig.hpp
    src/nana_extra/propertygrid.h
    src/ctrls/property.cpp
    src/ctrls/ctrl.cpp
    src/ctrls/label.h
    src/ctrls/box_model.cpp
    src/objectspanel.h
    src/inifile.cpp
    src/codegenerator_data.h
    src/items_dialog.cpp
    src/ctrls/notebook.cpp
    src/new_project.h
    src/style.h
    src/ctrls/tabbar.cpp
    src/pgitems_creator.h
    src/ctrls/treebox.cpp
    src/ctrls/custom.cpp
    src/nana_extra/color_helper.h
    src/config.h
    src/tree.h
    src/ctrls/tabbar.h
    src/ctrls/button.h
    src/namemanager.cpp
    src/pgitems_creator.cpp
    src/filemanager.h
    src/ctrls/textbox.h
    src/ctrls/categorize.h
    src/ctrls/splitterbar.h
    src/scrollablecanvas.h
    src/main.cpp
    src/guimanager.h
    src/ctrls/page.cpp
    src/ctrls/checkbox.h
    src/assetspanel.h
    src/codegenerator.cpp
    src/items_dialog.h
    src/namemanager.h
    src/ctrls/treebox.h
    src/ctrls/menubar.cpp
    src/filemanager.cpp
    src/assetspanel.cpp
    src/new_project.cpp
    src/ctrls/group.cpp
    src/info.h
    src/inifile.h
    src/objectspanel.cpp
    src/propertygrid_helper.h
    src/ctrls/menubar.h
    src/ctrls/custom.h
    src/ctrls/field.h
    src/ctrls/combox.h
    src/codegenerator.h
    src/creator.cpp
    src/propertiespanel.cpp
    src/info.cpp
    src/ctrls/page.h
    src/imagemanager.cpp
    src/ctrls/checkbox.cpp
    src/ctrls/slider.cpp
    src/ctrls/form.cpp
    src/imagemanager.h
    src/ctrls/combox.cpp
    src/ctrls/listbox.cpp
    src/ctrls/label.cpp
    src/ctrls/field.cpp
    src/ctrls/date_chooser.h
    src/ctrls/slider.h
    src/ctrls/notebook.h
    src/ctrls/date_chooser.cpp
    src/ctrls/progress.h
    src/ctrls/button.cpp
    src/nana_extra/pgitems.cpp
    src/ctrls/spinbox.h
    src/ctrls/ctrl.h
    src/ctrls/form.h
    src/guimanager.cpp
    src/ctrls/toolbar.h
    src/ctrls/picture.h
    src/ctrls/listbox.h
    src/ctrls/panel.cpp
    src/ctrls/textbox.cpp
    src/ctrls/progress.cpp
    src/ctrls/categorize.cpp
    src/scrollablecanvas.cpp
    src/ctrls/panel.h
    src/ctrls/splitterbar.cpp
    src/ctrls/group.h
    src/nana_extra/color_helper.cpp
    src/ctrls/spinbox.cpp
    src/ctrls/picture.cpp
    src/propertiespanel.h
    src/ctrls/toolbar.cpp
    )

target_compile_options(nana-creator PRIVATE -std=c++17 -pthread)
target_include_directories(nana-creator PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/libs
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    )

target_link_libraries(nana-creator
  PRIVATE  -L/usr/local -lnana -L/usr -lX11 -lXft -lXcursor -lfontconfig -lstdc++fs -lpthread
  )

add_executable(test-ctrls
    tests/ctrls/main.cpp
    tests/ctrls/ctrls.ncp
    tests/ctrls/ctrls.h
    )
target_link_libraries(test-ctrls
  PRIVATE  -L/usr/local -lnana -L/usr -lX11 -lXft -lXcursor -lfontconfig -lstdc++fs -lpthread
  )
add_test(NAME test-ctrls COMMAND test-ctrls)

include(CTest)
